--- a/pages/index.css
+++ b/pages/index.css
@@ -24,4 +24,9 @@
 /* рассказать о спектакле в соц сетях */
 @import url(../blocks/share/share.css);
 /* футер */
-@import url(../blocks/footer/footer.css)
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__logo/footer__logo.css);
+@import url(../blocks/footer/__logos/footer__logos.css);
+@import url(../blocks/footer/__lub-logo/footer__lub-logo.css);
+@import url(../blocks/footer/__paragraph/footer__paragraph);
+@import url(../blocks/footer/__partners/footer__partners.css);
