--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,10 +1,9 @@
 .header {
-    margin: 0;
-    box-sizing: border-box;
-    max-height: 62px;
-    /* все что ниже можно смело удалить */
-    width: 100%;
-    border: 2px dotted black;
-    overflow: scroll;
-
+  margin: 0;
+  box-sizing: border-box;
+  height: 62px;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #242424;
+  font-family: 'FormularLight';
 }
