--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -1,3 +1,8 @@
 .logo {
-    margin: 0;
+  margin: 0 33px 0 30px;
+  width: 43px;
+  height: 34px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
