--- a/pages/index.css
+++ b/pages/index.css
@@ -15,6 +15,8 @@
 @import url(../blocks/header/__social/header__social.css);
 @import url(../blocks/header/__support/header__support.css);
 @import url(../blocks/header/__support-icon/header__support-icon.css);
+@import url(../blocks/header/__menu/header__menu.css);
+@import url(../blocks/header/__menu-item/header__menu-item.css);
 /* основной контент страницы */
 @import url(../blocks/content/content.css);
 /* фотографии */
