--- a/pages/index.css
+++ b/pages/index.css
@@ -17,6 +17,7 @@
 @import url(../blocks/header/__support-icon/header__support-icon.css);
 @import url(../blocks/header/__menu/header__menu.css);
 @import url(../blocks/header/__menu-item/header__menu-item.css);
+@import url(../blocks/header/__line-top/header__line-top.css);
 /* основной контент страницы */
 @import url(../blocks/content/content.css);
 /* фотографии */
