--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -8,3 +8,8 @@
   border-bottom: 1px solid #242424;
   font-family: 'FormularLight';
 }
+@media screen and (max-width: 1439px) {
+  .header {
+    border: none;
+  }
+}
