--- a/blocks/header/__menu/header__menu.css
+++ b/blocks/header/__menu/header__menu.css
@@ -8,3 +8,8 @@
   padding: 20px 0 20px 0;
   border-right: 1px solid #242424;
 }
+@media screen and (max-width: 1439px) {
+  .header__menu {
+    display: none;
+  }
+}
