--- a/blocks/header/__socials/header__socials.css
+++ b/blocks/header/__socials/header__socials.css
@@ -11,3 +11,8 @@
   border-right: 1px solid #242424;
 
 }
+@media screen and (max-width: 1439px) {
+  .header__socials {
+    display: none;
+  }
+}
