--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -6,3 +6,9 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+@media screen and (max-width: 1439px) {
+  .logo {
+    margin: 0 24px 0 19px;
+  }
+}
+
