--- a/pages/index.css
+++ b/pages/index.css
@@ -18,6 +18,7 @@
 @import url(../blocks/header/__menu/header__menu.css);
 @import url(../blocks/header/__menu-item/header__menu-item.css);
 @import url(../blocks/header/__line-top/header__line-top.css);
+@import url(../blocks/header/__button/header__button.css);
 /* основной контент страницы */
 @import url(../blocks/content/content.css);
 /* фотографии */
