--- a/blocks/header/__menu-item/header__menu-item.css
+++ b/blocks/header/__menu-item/header__menu-item.css
@@ -14,10 +14,15 @@
 }
 
 .header__menu-item::after {
+  margin: 0 29px 0 0;
+}
+
+.header__menu-item:after {
   content: "";
   position: absolute;
   left: 0;
   right: 0;
+  top: 0;
   top: 0;
   bottom: 0;
   border-radius: 10px;
