Верстка секции feedback V1

--- a/blocks/feedback/__author/feedback__author.css
+++ b/blocks/feedback/__author/feedback__author.css
@@ -1,4 +1,4 @@
-.reviews__author {
+.feedback__author {
     margin: 0;
     font-family: 'NeueMachinaRegular' , "Arial", "Impact", sans-serif;
     font-style: normal;
