--- a/blocks/feedback/__comment/feedback__comment.css
+++ b/blocks/feedback/__comment/feedback__comment.css
@@ -1,4 +1,4 @@
-.reviews__comment {
+.feedback__comment {
     margin: 0;
     font-family: 'FormularLight' , "Arial", "Impact", sans-serif;
     font-style: normal;
