--- a/blocks/title/title.css
+++ b/blocks/title/title.css
@@ -1,4 +1,4 @@
-.photo__title {
+.title {
   max-width: 568px;
   font-family: 'NeueMachinaRegular';
   font-size: 40px;
@@ -11,7 +11,7 @@
 }
 
 @media screen and (max-width: 767px) {
-  .photo__title {
+  .title {
     max-width: 369px;
     font-size: 28px;
     line-height: 32px;
@@ -19,7 +19,7 @@
 }
 
 @media screen and (max-width: 414px) {
-  .photo__title {
+  .title {
     padding-left: 24px;
   }
 }
