--- a/pages/index.css
+++ b/pages/index.css
@@ -30,3 +30,20 @@
 @import url(../blocks/footer/__lub-logo/footer__lub-logo.css);
 @import url(../blocks/footer/__paragraph/footer__paragraph);
 @import url(../blocks/footer/__partners/footer__partners.css);
+@import url(../blocks/footer/__content/footer__content.css);
+@import url(../blocks/footer/__item/footer__item.css);
+@import url(../blocks/footer/__items/footer__items.css);
+@import url(../blocks/footer/__link/footer__link.css);
+@import url(../blocks/footer/__text/footer__text.css);
+@import url(../blocks/footer/__title/footer__title.css);
+@import url(../blocks/footer/__address/footer__address.css);
+@import url(../blocks/footer/__bottom/footer__bottom.css);
+@import url(../blocks/footer/__conf-lyubimovka/footer__conf-lyubimovka.css);
+@import url(../blocks/footer/__conf/footer__conf.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
+@import url(../blocks/footer/__design-logo/footer__design-logo.css);
+@import url(../blocks/footer/__design-title/footer__design-title.css);
+@import url(../blocks/footer/__design/footer__design.css);
+@import url(../blocks/footer/__policy/footer__policy.css);
+@import url(../blocks/footer/__students/footer__students.css);
+
