--- a/blocks/photo/__items/photo__items.css
+++ b/blocks/photo/__items/photo__items.css
@@ -1,6 +1,8 @@
 .photo__items {
   list-style: none;
   padding: 0;
+  padding-bottom: 146px;
+  margin: 0;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
 }
