--- a/blocks/footer/__students/footer__students.css
+++ b/blocks/footer/__students/footer__students.css
@@ -2,4 +2,7 @@
     margin: 0;
     align-self: center;
     max-width: 207px;
+    font-weight: 300;
+    line-height: 17px;
+    font-size: 14px;
 }
