--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -1,3 +1,13 @@
 .content {
-    margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items:flex-start;
+    margin: 0 0 144px 0;
 }
+@media screen and (max-width: 1439px) {
+  .content {
+    margin: 0 0 100px 0;
+  }
+
+}
+
