--- a/blocks/header/__button/header__button.css
+++ b/blocks/header/__button/header__button.css
@@ -1,7 +1,5 @@
 .header__button {
-  position: absolute;
-  top: 94px;
-  left: 30px;
+  display: none;
   background-image: url(../../../images/Union.svg);
   background-repeat: no-repeat;
   background-position: right;
@@ -26,12 +24,9 @@
 
 @media screen and (max-width: 1439px) {
   .header__button {
-    position: relative;
-    top: auto;
-    left: auto;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    justify-content: flex-end;
+    justify-content:flex-end;
   }
 }
