--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,6 @@
 .header {
   position: relative;
-  margin: 0 0 95px 0;
+  margin: 0;
   box-sizing: border-box;
   height: 62px;
   display: flex;
@@ -11,7 +11,5 @@
 @media screen and (max-width: 1439px) {
   .header {
     border: none;
-    margin: 0 0 50px 0;
-
   }
 }
