--- a/blocks/photo/__items/photo__items.css
+++ b/blocks/photo/__items/photo__items.css
@@ -2,7 +2,7 @@
   list-style: none;
   padding: 0;
   padding-bottom: 146px;
-  margin: 0;
+  margin: 40px 0 0 0;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
 }
