--- a/blocks/slider/__pagination/slider__pagination.css
+++ b/blocks/slider/__pagination/slider__pagination.css
@@ -1,5 +1,7 @@
-.slider {
+.slider__pagination {
   display: flex;
   align-items: center;
   list-style-type: none;
+  order: 1;
+  margin: 0 0 0 auto;
 }
