--- a/blocks/splide/__slider/splide__slider.css
+++ b/blocks/splide/__slider/splide__slider.css
@@ -1,6 +1,9 @@
-.slider-container {
+.splide__slider {
     display: flex;
     width: 100%;
     max-width: 718px;
     justify-content: space-between;
+    margin: 0 auto;
+    margin-bottom: 40px;
+    position: relative;
 }
