all buttons in Content added except of press function

--- a/blocks/from-ptu/__button/from-ptu__button.css
+++ b/blocks/from-ptu/__button/from-ptu__button.css
@@ -17,11 +17,34 @@
   font-style: normal;
   font-weight: 300;
   line-height: 14px;
-  letter-spacing: 0em;
   text-align: left;
   text-transform: uppercase;
   border: 1px solid #000;
+  position: relative;
 }
+
+.from-ptu__button::before {
+  content:'';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 0;
+	height: 56px;
+	background: linear-gradient(#242424, #242424) no-repeat right;
+	transition: all 1s ease;
+  z-index: -1;
+}
+
+.from-ptu__button:hover:before {
+  width: 100%;
+}
+
+.from-ptu__button:hover {
+  color: #fff;
+  background-image: url(../../../images/arrow-right-active.svg);
+  transition: 0.1s linear;
+}
+
 @media screen and (max-width: 1439px) {
   .from-ptu__button {
     margin: 0 0 0 85px;
