Доделан второй слайдер

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -3,3 +3,9 @@
     margin: 0 auto;
     background-color: rgb(236, 235, 232);
 }
+
+@media screen and (max-width: 1439px) {
+  .page {
+    max-width: 414px;
+  }
+}
