--- a/blocks/share/__picture/share__picture.css
+++ b/blocks/share/__picture/share__picture.css
@@ -1,6 +1,7 @@
 .share__picture {
     margin: 64px auto 0;
     max-width: 1320px;
+    width: 100%;
     display: flex;
     justify-self: center;
 }
