--- a/blocks/feedback/feedback.css
+++ b/blocks/feedback/feedback.css
@@ -1,6 +1,6 @@
 .feedback {
     margin: 0;
-    padding: 0 60px 0 60px;
+    max-width: 1320px;
     display: flex;
     flex-direction: column;
     align-items: center;
