--- a/blocks/reviews/__container/reviews__container.css
+++ b/blocks/reviews/__container/reviews__container.css
@@ -1,7 +1,8 @@
 .reviews__container {
-  min-width: 537px;
-  max-width: 895px;
-  max-height: 655px;
+  height: 100%;
   padding: 55px 89px 72px 88px;
   background-color: #fff;
+  box-sizing: border-box;
+  display: grid;
+  grid-template-rows: min-content;
 }
