--- a/blocks/reviews/__button/reviews__button.css
+++ b/blocks/reviews/__button/reviews__button.css
@@ -1,4 +1,5 @@
 .reviews__button {
+  margin: 0;
   font-family: 'formular-light', Arial, Helvetica, sans-serif;
   font-size: 16px;
   font-style: normal;
@@ -13,4 +14,5 @@
   padding-bottom: 10px;
   padding-left: 28px;
   max-width: 210px;
+  text-decoration: none;
 }
