--- a/blocks/splide/__slide/_place/splide__slide_place_feedback.css
+++ b/blocks/splide/__slide/_place/splide__slide_place_feedback.css
@@ -7,9 +7,5 @@
     justify-content: space-between;
     min-height: 361px;
     box-sizing: border-box;
-    margin-right: 30px;
-}
-
-.splide__slide_place_feedback:nth-of-type(3n) {
-  margin-right: 0;
+    /* margin-right: 30px; */
 }
